--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     --font-color-1: #FFFFFF;
     --font-color-2: #d4d4d4;
     --custom-orange: #ff550d;
+
+    --icon-gold: #ffb038;
+    --icon-silver: #bebebe;
+    --icon-bronze: #8a4111;
 }
 
 *{
@@ -62,6 +66,7 @@ h1, h2{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    
 }
 
 .section_data_title{
@@ -106,8 +111,50 @@ h1, h2{
 .year_best_data{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: first baseline;
 }
 
+/* Podium Stylings */
 
+.year_best_data>.section_data_item{
+    width: 100%;
+}
+
+.podium{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start; 
+    gap: 20px;
+}
+
+.podium_item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.podium_item:nth-child(1) > i{
+    color: var(--icon-gold)
+}
+.podium_item:nth-child(2) > i{
+    color: var(--icon-silver)
+}.podium_item:nth-child(3) > i{
+    color: var(--icon-bronze)
+}
+
+.places_data{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
+.places_data>.section_data_item{
+    display: flex;
+    flex-direction: row;
+    gap: 20px
+}
 
