--- a/style.css
+++ b/style.css
@@ -83,15 +83,19 @@ h1, h2{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
 .profile{
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: flex-start;
     gap: 10px;
+}
+
+.profile>img{
+    border-radius: 50%;
 }
 
 .banner-year{
