--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ h1, h2{
     flex-direction: row;
     flex-wrap: wrap;
     align-items: first baseline;
-    gap: 50px
+    gap: 50px;
+    padding-bottom: 20px;
 }
 
 /* Podium Stylings */
